[gd_scene load_steps=7 format=3 uid="uid://cnliugkwdvva7"]

[ext_resource type="Script" path="res://scenes/qte/choose_ingredient.gd" id="1_ahy1n"]
[ext_resource type="AudioStream" uid="uid://cx0uw3a54gnxq" path="res://assets/sfx/Copy of Menu_Sounds_V2_Minimalistic_SAVE_SAVEFILE.mp3" id="2_qm6fb"]
[ext_resource type="Texture2D" uid="uid://dxp5rc82dl6jr" path="res://assets/ingredients/egg.png" id="2_ypra0"]
[ext_resource type="Texture2D" uid="uid://bqbefijjxuwba" path="res://assets/ingredients/redo.png" id="3_3nacp"]
[ext_resource type="AudioStream" uid="uid://gm3w1ikwxbj0" path="res://assets/sfx/Copy of Menu_Sounds_V2_Minimalistic_UNPAUSE.mp3" id="3_cn8cq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eohmf"]
size = Vector2(16, 16)

[node name="ChooseIngredient" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_top = -10.0
offset_bottom = -10.0
script = ExtResource("1_ahy1n")
audio_repick = ExtResource("2_qm6fb")
audio_choose = ExtResource("3_cn8cq")

[node name="Sprite1" type="Sprite2D" parent="."]
position = Vector2(-10, 20)
texture = ExtResource("2_ypra0")

[node name="Area1" type="Area2D" parent="Sprite1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite1/Area1"]
shape = SubResource("RectangleShape2D_eohmf")

[node name="Sprite2" type="Sprite2D" parent="."]
position = Vector2(-10, 0)
texture = ExtResource("2_ypra0")

[node name="Area2" type="Area2D" parent="Sprite2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2/Area2"]
shape = SubResource("RectangleShape2D_eohmf")

[node name="Sprite3" type="Sprite2D" parent="."]
position = Vector2(10, 0)
texture = ExtResource("2_ypra0")

[node name="Area3" type="Area2D" parent="Sprite3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite3/Area3"]
shape = SubResource("RectangleShape2D_eohmf")

[node name="Sprite4" type="Sprite2D" parent="."]
position = Vector2(10, 20)
texture = ExtResource("3_3nacp")

[node name="Area4" type="Area2D" parent="Sprite4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite4/Area4"]
shape = SubResource("RectangleShape2D_eohmf")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[connection signal="input_event" from="Sprite1/Area1" to="." method="_on_area_1_input_event"]
[connection signal="input_event" from="Sprite2/Area2" to="." method="_on_area_2_input_event"]
[connection signal="input_event" from="Sprite3/Area3" to="." method="_on_area_3_input_event"]
[connection signal="input_event" from="Sprite4/Area4" to="." method="_on_area_4_input_event"]
